tester/testsuite/bad/bad051.jl
int main() {
    // Arithmetic operations with cross-types
    int x;
    double y;
    printDouble(x+y);

    return 0;
}
